Fixed About Me Link container to now switch to inline on small screens

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -38,6 +38,14 @@
     visibility: visible;
   }
 
+  .About-links {
+    display: inline-block;
+  }
+
+  .AboutIMG {
+    width: 40%;
+  }
+
   /* TODO */
   /* Rules needed for small landscape views */
   /* Specifically the Button Menu */
