--- a/src/components/Layout/About/about.css
+++ b/src/components/Layout/About/about.css
@@ -16,19 +16,6 @@
   margin-top: 30px;
 }
 
-@media screen and (max-device-width: 750px) {
-  .AboutIMG {
-    width: 30%;
-    background-color: red;
-  }
-}
-
-@media screen and (max-width: 750px) and (max-height: 640px) {
-  .AboutIMG {
-    width: 40%;
-  }
-}
-
 .About-info-left {
   float: left;
   margin-top:50px;
@@ -52,13 +39,11 @@
   border: 4px solid black;
   border-radius: 25px;
   width: 80%;
-  /* height: 82px; */
   color: white;
 
   display: flex;
-  /* flex-direction: row; */
+  
 }
-
 
 .About-container p {
   font-size: 16px;
@@ -67,7 +52,7 @@
 .About-links ul {
   margin-left: 0px;
   padding-left: 0px;
-  margin: 4px;
+  /* margin: 4px; */
   list-style-type: none;
 
   flex-grow: 1;
